--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/USER.registration/CSS/style.css">
+    <link rel="stylesheet" href="/USER.registration/CSS/main.css">
     <title>Register</title>
   </head>
   <header>
@@ -23,7 +23,12 @@
   </header>
   <body>
     <main>
-      <form action="#">
+      <form class="capture-form" action="#">
+
+        <h3>Add a New User</h3>
+
+        <p class="alert-error hide" id="alertError"> Please fill in all fields! </p>
+
       <div class="input-container">
         <label for="fName"><b>First Name:</b></label>
         <input type="text" class="form-control" id="txtfname" />
@@ -70,8 +75,9 @@
       </div>
 
       </form>
-      <button class="btn btn-primary" onclick="register()">Register</button>
+      <button class="btn btn-primary" id="btnSave" onclick="register()">Register</button>
     </main>
+    <script src="/USER.registration/Scripts/storeManager.js"></script>
     <script src="/USER.registration/Scripts/register.js"></script>
   </body>
 </html>
