--- a/register.html
+++ b/register.html
@@ -14,6 +14,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">Home</a>
         <a class="navbar-brand" href="register.html">Register</a>
+        <a class="navbar-brand" href="users.html">Users</a>
       </div>
     </nav>
     <h1>
@@ -28,6 +29,7 @@
         <h3>Add a New User</h3>
 
         <p class="alert-error hide" id="alertError"> Please fill in all fields! </p>
+        <p class="alert-error hide" id="alertPass"> Password Too Short!!</p>
 
       <div class="input-container">
         <label for="fName"><b>First Name:</b></label>
@@ -41,7 +43,7 @@
 
       <div class="input-container">
         <label for="email" class="form-label"><b>Email:</b></label>
-        <input type="text" class="form-control" placeholder="name@example.com" id="txtemail" />
+        <input type="text" class="form-control" placeholder="name@example.com" id="txtemail"/>
       </div>
 
       <div class="input-container">
