--- a/register.html
+++ b/register.html
@@ -77,9 +77,10 @@
       </div>
 
       </form>
-      <button class="btn btn-primary" id="btnSave" onclick="register()">Register</button>
+      <button class="btn btn-primary" id="btnSave" onclick="register();">Register</button>
     </main>
-    <script src="/USER.registration/Scripts/storeManager.js"></script>
     <script src="/USER.registration/Scripts/register.js"></script>
+    <script src="/USER.registration/Scripts/storeManager.js"></script>
+    
   </body>
 </html>
